[project]
name = "langchain-mcp"
version = "0.1.0"
description = "LangGraph MCP Integration with Tavily, Math, and Weather servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "langchain-core>=0.3.49",
    "langchain-mcp-adapters>=0.0.6",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.1",
    "mcp>=1.4.1",
    "openai>=1.70.0",
    "pydantic>=2.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pylint>=3.0.0",
]

[project.scripts]
langchain-mcp = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
